--- a/templates/home.html
+++ b/templates/home.html
@@ -8,6 +8,6 @@
     <h1>Weather Data API</h1>
     <p>URL Format example: http://127.0.0.1:5000/{whatever(if its valid :) )} </p>
     <p>URL Format example: http://127.0.0.1:5000/api/v1/2/1860-01-05</p>
-    <p></p>
+    <p>{{data|safe}}</p>
 </body>
 </html>
