Final Version of Web API

--- a/templates/home.html
+++ b/templates/home.html
@@ -6,8 +6,9 @@
 </head>
 <body>
     <h1>Weather Data API</h1>
-    <p>URL Format example: http://127.0.0.1:5000/{whatever(if its valid :) )} </p>
-    <p>URL Format example: http://127.0.0.1:5000/api/v1/2/1860-01-05</p>
+    <p>URL Format: http://127.0.0.1:5000/api/v1/station/date </p>
+    <p>Format example for one station for one day: http://127.0.0.1:5000/api/v1/2/1860-01-05</p>
+    <p>Format example for one station: http://127.0.0.1:5000/api/v1/2</p>
     <p>{{data|safe}}</p>
 </body>
 </html>
